# open-cognition

./: .env.example  .gitignore  CNAME  Makefile  README.md  docker-compose.yml  go.mod  requirements-dev.txt  roadmap.md
agents/observer/: Dockerfile  pyproject.toml
agents/observer/observer/: agent.py  client.py  models.py  observe.py  signing.py
cmd/control-plane/: Dockerfile  main.go
dashboard/: tsconfig.json
dashboard/src/: main.ts
dashboard/static/: index.html  main.js
docs/: architecture-diagram.md  architecture.md  data-flow-diagram.md  governance-model.md  lifecycle.md  threat-model.md  trust-model.md  v1-readiness.md
examples/: agent_reference_example.json  canonical_object_example.json
internal/api/: handlers.go
internal/db/: db.go
internal/models/: types.go
internal/pg/: pg.go
internal/storage/: client.go  sigv4.go
migrations/: 001_initial.sql  002_agent_keys.sql
schemas/: agent_reference.schema.json  canonical_object.schema.json  policy.schema.json
scripts/: backup_pg.sh  export_canonicals.sh  reconcile_storage.sh  smoke_test.sh  validate_schemas.py
