[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observer"
version = "0.1.0"
description = "open-cognition observer agent — collects and submits canonical observations"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "structlog>=24",
]

[project.scripts]
observer = "observer.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["observer"]
